# api/src/WeightTracker.Api/openapi.json
@@ -334,6 +334,62 @@
         ]
       }
     },
+    "/api/calculations/calories": {
+      "post": {
+        "tags": [
+          "Calculations"
+        ],
+        "operationId": "CalculateCalories",
+        "requestBody": {
+          "x-name": "CaloriesPostRequest",
+          "description": "",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CaloriesPostRequest"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CaloriesPostResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Server Error"
+          }
+        },
+        "security": [
+          {
+            "JWTBearerAuth": []
+          },
+          {
+            "ApiKey": []
+          }
+        ]
+      }
+    },
     "/api/calculations/bmi": {
       "post": {
         "tags": [
@@ -585,6 +641,93 @@
       "WeightsDeleteRequest": {
         "type": "object",
         "additionalProperties": false
+      },
+      "CaloriesPostResponse": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "restingCaloriesPerDay",
+          "maintenanceCaloriesPerDay"
+        ],
+        "properties": {
+          "restingCaloriesPerDay": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "maintenanceCaloriesPerDay": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
+      "CaloriesPostRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "weightKg",
+          "heightCm",
+          "ageYears",
+          "sex",
+          "activityLevel"
+        ],
+        "properties": {
+          "weightKg": {
+            "type": "number",
+            "format": "decimal",
+            "maximum": 500.0,
+            "minimum": 0.0,
+            "exclusiveMinimum": true
+          },
+          "heightCm": {
+            "type": "number",
+            "format": "decimal",
+            "maximum": 300.0,
+            "minimum": 0.0,
+            "exclusiveMinimum": true
+          },
+          "ageYears": {
+            "type": "integer",
+            "format": "int32",
+            "maximum": 120.0,
+            "minimum": 18.0
+          },
+          "sex": {
+            "$ref": "#/components/schemas/Sex"
+          },
+          "activityLevel": {
+            "$ref": "#/components/schemas/ActivityLevel"
+          }
+        }
+      },
+      "Sex": {
+        "type": "string",
+        "description": "",
+        "x-enumNames": [
+          "Female",
+          "Male"
+        ],
+        "enum": [
+          "female",
+          "male"
+        ]
+      },
+      "ActivityLevel": {
+        "type": "string",
+        "description": "",
+        "x-enumNames": [
+          "Sedentary",
+          "LightlyActive",
+          "ModeratelyActive",
+          "VeryActive",
+          "ExtraActive"
+        ],
+        "enum": [
+          "sedentary",
+          "lightlyActive",
+          "moderatelyActive",
+          "veryActive",
+          "extraActive"
+        ]
       },
       "BmiPostResponse": {
         "type": "object",
